@@ -31,7 +31,6 @@ import Propellor.Types.CmdLine
 import Propellor.Types.Info
 import Propellor.Property.PropellorRepo (OriginUrl(..))
 import qualified Propellor.Shim as Shim
-import Utility.FileMode
 import Utility.SafeCommand
 import Utility.Process.NonConcurrent
 
